--- a/prep/src/styles/form-panels.css
+++ b/prep/src/styles/form-panels.css
@@ -41,7 +41,7 @@
 /* ━━━ Tools Dropdown ━━━ */
 .tools-dropdown {
   position: fixed;
-  top: 73px;
+  top: 80px;
   right: 0;
   width: 320px;
   bottom: 0;
